modern java (25) and vibe coded extensions